# ChangeLog for app-antivirus/clamav
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.308 2008/09/13 22:48:04 dertobi123 Exp $

  13 Sep 2008; Tobias Scherbaum <dertobi123@gentoo.org> clamav-0.94.ebuild:
  Add missing buildtime dep on dev-util/pkgconfig, #237552

  08 Sep 2008; Brent Baude <ranger@gentoo.org> clamav-0.94.ebuild:
  Marking clamav-0.94 ppc64 and ppc for bug 236665

  08 Sep 2008; Raúl Porcel <armin76@gentoo.org> clamav-0.94.ebuild:
  ia64 stable wrt #236665

  07 Sep 2008; Friedrich Oslage <bluebird@gentoo.org> clamav-0.94.ebuild:
  Stable on sparc, security bug #236665

  07 Sep 2008; Markus Meier <maekke@gentoo.org> clamav-0.94.ebuild:
  x86 stable, bug #236665

  06 Sep 2008; Jeroen Roovers <jer@gentoo.org> clamav-0.94.ebuild:
  Stable for HPPA (bug #236665).

  06 Sep 2008; Jose Luis Rivero <yoswink@gentoo.org> clamav-0.94.ebuild:
  Stable on alpha wrt bug #236665

  06 Sep 2008; Richard Freeman <rich0@gentoo.org> clamav-0.94.ebuild:
  amd64 stable - 236665

  06 Sep 2008; Raúl Porcel <armin76@gentoo.org> clamav-0.94.ebuild:
  Add missing dep on dev-libs/check when running the tests

  05 Sep 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  -files/clamav-0.90-compat.patch, -files/clamav-0.90-nls.patch,
  -files/clamav-0.91.2-CVE-2007-5759.patch,
  -files/clamav-0.91.2-CVE-2007-6336.patch,
  -files/clamav-0.91.2-CVE-2007-6337.patch, -clamav-0.91.2.ebuild,
  -clamav-0.91.2-r1.ebuild, -clamav-0.92.ebuild, -clamav-0.92.1.ebuild,
  -clamav-0.92.1-r1.ebuild, -clamav-0.93.ebuild, -clamav-0.93.1.ebuild:
  Cleanup

*clamav-0.94 (05 Sep 2008)

  05 Sep 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  +files/clamav-0.94-buildfix.patch, +files/clamav-0.94-nls.patch,
  +clamav-0.94.ebuild:
  Version bump, #236665

  22 Jul 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  clamav-0.93.3.ebuild:
  ppc stable, bug #227351
