@@ -9,7 +9,7 @@ AUX clamav-0.94.2-nls.patch~ 2429 RMD160 d881762f39f71f98b48b5f9bb203e1e1cc515df
 AUX clamav-milter.README.gentoo 1124 RMD160 4fb1e2d9b444874838bcea1071969ca6862fb15b SHA1 0b9b86a0e7732eaaf7f880859265754f7a4efd3a SHA256 5e7b142b68964bc3463b077e5698fa77cace45ea9612258b1e1849cee944dd11
 AUX clamav.logrotate 355 RMD160 f59cd8ce96da8210aa858ee59ee3b6940e3253a6 SHA1 5fbd9364997400681d5a93cb50cac8a0f188e56f SHA256 ab91f784d5098d2162be9277e3a006bdb392d9d89975838ad4ac7dfd8b418170
 AUX clamd.conf 234 RMD160 b517b05e587637cbdd443f7ca3625d582e32722f SHA1 564b1e2f6cf85567f69f2e20cbc942967fa6304b SHA256 17bf4fe3596dc5b145e4163d85181e2edcaa214df3cf9072d852ba0e7a569891
-AUX clamd.rc 3686 RMD160 0298ad54c13bb2c9d2e667270546308dbc581d7d SHA1 22299bf3a4812afbf45b792c55bc31c552fe12df SHA256 0f68262e6c55883d2f32cfdbbfeb33f64fc9c4bf019f59ae6b7bc864fa2d346c
+AUX clamd.rc 3715 RMD160 372286b13c7c9b6f9d4cf8038387465d1b823596 SHA1 864ff3b8cb37771683fc6badd63df729056bb2fe SHA256 3fecac149ce0f7a16857113f4f3a58773e94bd665f6f8a67f9012a4d524edfa2
 AUX lib-ld.m4 3417 RMD160 7b412510e7ef9966f70ed29937e3556283128a9b SHA1 8b72b8f5f76e41e4ca0f2521c06c568490894a84 SHA256 18c4c458009da32c9daf0ea332a539e5edc82ba009b6c2faac004626313f00e5
 DIST clamav-0.94.1.tar.gz 21817818 RMD160 268d3b4b00c208f8a9aa3bfaa430eb8d22a4bf33 SHA1 8eed11eb68dc6cb15d4bb12de034a4252dc09373 SHA256 15cd3f5ed349f736b9926dd118d0b8edda7d58fe1f73118d4ffd21b3016f5dea
 DIST clamav-0.94.1rc1.tar.gz 21534700 RMD160 b837748d2e6ef6cc052b386ae326945d8538d0b1 SHA1 01c6a6c7c3bde28948e5e57b6e23939b4b5c742f SHA256 c8aa6ca9fce67ebc5dceb8bc3370132f46cd20d2d0e069882f6b7c25ef44299e
@@ -17,5 +17,5 @@ DIST clamav-0.94.2.tar.gz 22107637 RMD160 ae75e5f546f96b7fd0f76dcf9f4977ec95ba4d
 EBUILD clamav-0.94.1.ebuild 5277 RMD160 47b1cca419956a461cebfff288c05e319fc93fce SHA1 2ba1d6975c3685a58d7fc79d327a147181a79ba2 SHA256 a6508ed88a33a0276d563bb1e2754c2fc15f5b6e49ae7aa0862e73b64f5a1dbe
 EBUILD clamav-0.94.1_rc1.ebuild 5277 RMD160 47b1cca419956a461cebfff288c05e319fc93fce SHA1 2ba1d6975c3685a58d7fc79d327a147181a79ba2 SHA256 a6508ed88a33a0276d563bb1e2754c2fc15f5b6e49ae7aa0862e73b64f5a1dbe
 EBUILD clamav-0.94.2.ebuild 5277 RMD160 47b1cca419956a461cebfff288c05e319fc93fce SHA1 2ba1d6975c3685a58d7fc79d327a147181a79ba2 SHA256 a6508ed88a33a0276d563bb1e2754c2fc15f5b6e49ae7aa0862e73b64f5a1dbe
-MISC ChangeLog 46988 RMD160 e876395945075dc49b16db0f0d2d4f0d86bb83fa SHA1 8482fbd8b7480b32616265d18fd45557e4caebc5 SHA256 3f400d8adbd5919d969d5893bc64214c21cf2b5b84b0bc67f927c2675562c472
+MISC ChangeLog 47271 RMD160 7ee6b0d6774883828b9d138913dc732fd7ea31ba SHA1 6fa5835811f9d31686db7c23afff0b9fb7621718 SHA256 de108b2b6eb62960c5a965378e4d94a3d0fe0ee5726e25d62bb29bc8c9ab64d0
 MISC metadata.xml 184 RMD160 c37bff1fc1cd7139c91dae9b0fa5082e1d81f153 SHA1 cc0a188d9ad2411e78747326c62dd046bd5413c8 SHA256 d51011aa837db802ef539a1321a4af0a4a00879d475b92fd58f3c01df7320b58
