@@ -2,6 +2,12 @@
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-antivirus/clamav/ChangeLog,v 1.308 2008/09/13 22:48:04 dertobi123 Exp $
 
+	30 Nov 2008; Nathan Brink <ohnobinki@ohnopublishing.net> clamav-0.94.2-r1.ebuild:
+	In response to Gentoo bug #249231 : pulls in changes to files/clamd.rc
+	
+	30 Nov 2008; Nathan Brink <ohnobinki@ohnopublishing.net> clamav-0.94.2.ebuild:
+	In response to bump for Gentoo bug #248798
+	
   13 Sep 2008; Tobias Scherbaum <dertobi123@gentoo.org> clamav-0.94.ebuild:
   Add missing buildtime dep on dev-util/pkgconfig, #237552
 
